--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFC 262</title>
+
+    <link rel="stylesheet" href="index.css">
 </head>
 
-<body style="font-family: Verdana, Geneva, Tahoma, sans-serif; background-color: thistle;">
+<body>
     <header>
-        <h1 style="color:rgb(245, 209, 9); background-color: black; text-align: center;"><b>UFC 262</b></h1>
+        <h1 style=" color:rgb(245, 209, 9); background-color: black; text-align: center;"><b>UFC 262</b></h1>
 
         <a href="Video.html" ; target="_blank">
             <img width=600, src="https://www.mykhel.com/img/2021/05/ufc-262-poster-1620802055.jpg" ,
