--- a/HTML practise/UFC/UFC.html
+++ b/HTML practise/UFC/UFC.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1 style=" color:rgb(245, 209, 9); background-color: black; text-align: center;"><b>UFC 262</b></h1>
+        <h1><b>UFC 262</b></h1>
 
         <a href="Video.html" ; target="_blank">
             <img width=600, src="https://www.mykhel.com/img/2021/05/ufc-262-poster-1620802055.jpg" ,
